--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     display: flex;
     flex-wrap: wrap;
     background-color: rgb(146, 39, 39);
+    margin: 0 auto;
+    padding-bottom: 150px;
+    margin-top: 25px;
 }
 .square{
     height: 40px;
@@ -36,4 +39,28 @@ path{
 }
 .white{
     fill: #FFFFEF;
+}
+.alert.alert-secondary, .alert.alert-danger{
+    height: 30px;
+    width: 320px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px auto;
+    font-size: 16px;
+    line-height: 0;
+}
+.conteudo{
+    margin-bottom: 150px;
+}
+.footer {
+    background-color: #2b2c2d;
+    padding: 20px 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 200px;
+    text-align: center;
+    color: #FFFFEF;
+    font-size: 16px;
+    line-height: 10;
 }
