--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #gameboard{
-    width: 320px;
-    height: 320px;
+    width: 432px;
+    height: 432px;
     display: flex;
     flex-wrap: wrap;
     background-color: rgb(146, 39, 39);
@@ -9,14 +9,14 @@
     margin-top: 25px;
 }
 .square{
-    height: 40px;
-    width: 40px;
+    height: 54px;
+    width: 54px;
     position: relative;
 }
 .square svg{
-    height: 30px;
-    width: 30px;
-    margin: 5px;
+    height: 40.5px;
+    width: 40.5px;
+    margin: 6px;
     position: relative;
     z-index: -9;
 }
@@ -40,22 +40,19 @@ path{
 .white{
     fill: #FFFFEF;
 }
-.alert.alert-secondary, .alert.alert-danger{
+.alert.alert-secondary, .alert.alert-danger, .alert.alert-success{
     height: 30px;
-    width: 320px;
+    width: 432px;
     display: flex;
     flex-wrap: wrap;
     margin: 10px auto;
     font-size: 16px;
     line-height: 0;
 }
-.conteudo{
-    margin-bottom: 150px;
-}
 .footer {
     background-color: #2b2c2d;
     padding: 20px 0;
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 200px;
@@ -64,3 +61,24 @@ path{
     font-size: 16px;
     line-height: 10;
 }
+.group {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    width: 100%;
+    margin-bottom: 150px;
+}
+.content {
+    width: 35%;
+    padding: 10px;
+}
+.rectangle {
+    width: 300px;
+    height: 432px;
+    background-color: #ebebeb;
+    border-radius: 1%; 
+}
+
